--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -11,20 +11,17 @@ share: true
 
 ##  Basic Commands
 ```sql
-c:/Users/njikim > mysql -uroot -p
+mysql -uroot -p
 Enter password: ****
-mysql > SHOW databases;
-mysql> USE world;
-mysql> SHOW tables;
-mysql> DESC country;
-mysql> SELECT name, capital FROM country;
-```
-```sql
--- sqlplus창 보기 화면 여백 조절 편집 명령어
--- 단순 sqlplus tool만의 평집 명령어
--- 영구 저장 안됨. sqlplus 실행시마다 해 줘야 함
-mysql> set linesize 200
-mysql> set pagesize 200
+
+set linesize 200
+set pagesize 200
+
+SHOW databases;
+USE world;
+SHOW tables;
+DESC country;
+SELECT name, capital FROM country;
 ```
 
 ## SCOTT
