--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -248,7 +248,8 @@ SELECT a.id, a.value, b.id, b.value, c.id, c.value
 SELECT deptno FROM scott_emp 
 UNION 
 SELECT deptno FROM scott_dept;
-
+```
+<pre class="output">
 +--------+
 | deptno |
 +--------+
@@ -257,11 +258,14 @@ SELECT deptno FROM scott_dept;
 |     30 |
 |     40 |
 +--------+
+</pre>
 
+```sql
 SELECT deptno FROM scott_emp 
 UNION ALL 
 SELECT deptno FROM scott_dept;
-
+```
+<pre class="output">
 +--------+
 | deptno |
 +--------+
@@ -284,7 +288,9 @@ SELECT deptno FROM scott_dept;
 |     30 |
 |     40 |
 +--------+
-```
+</pre>
+
+<br>
 
 ## 7. 데이터 무결성 (Integrity)
 - **제약: Constraint**
@@ -319,7 +325,9 @@ CREATE TABLE tableEXAM(
 INSERT INTO tableEXAM(id) VALUES(1);
 INSERT INTO tableEXAM(id) VALUES(1);
 
--- PRIMARY KEY: 한 테이블 당 한개만 소유
+/* PRIMARY KEY: 
+- 한 테이블 당 한개만 소유
+- 여러 컬럼을 하나로 묶을 수 있음 */
 ALTER TABLE tableEXAM ADD CONSTRAINT pk_id PRIMARY KEY(id);
 DELETE FROM tableEXAM;
 ALTER TABLE tableEXAM ADD CONSTRAINT pk_id PRIMARY KEY(id);
@@ -335,20 +343,28 @@ INSERT INTO tableEXAM(name) VALUES('kimmy'); -- ERROR
 ```sql
 -- PRIMARY KEY 지정 방법
 DROP TABLE tableEXAM;
+--하나의 field에만 primary key
 CREATE TABLE tableEXAM(
-	id	int	PRIMARY KEY,
+	id	int	PRIMARY KEY, 
 	name varchar(10)
 );
 
 DROP TABLE tableEXAM;
-CREATE TABLE tableEXAM(
-	id	int,
-	name varchar(10)
-	CONSTRAINT pk_id PRIMARY KEY(id)
+-- 여러 field를 하나의 primary key로 가능 (권장)
+CREATE TABLE tableEXAM( 
+	id	int, 
+	name varchar(10), 
+	CONSTRAINT pk_id PRIMARY KEY(id) 
 );
 ```
 ```sql
--- data dictionary
-```
+-- NN
+CREATE TABLE tableEXAM( 
+	id	int	not null, 
+    name	varchar(10)	not null 
+);
 
+-- name을 null 로
+ALTER TABLE tableEXAM MODIFY name varchar(10) null;
+```
 
