--- a/_posts/2019-03-28-SQL(2).md
+++ b/_posts/2019-03-28-SQL(2).md
@@ -183,6 +183,27 @@ SELECT ename, job, hiredate, sal FROM scott_emp as  e1
 WHERE exists (SELECT * FROM scott_emp as e2 WHERE e1.empno= e2.mgr);
 ```
 
+### 연습문제
+```
+1. Blake와 같은 부서에 있는 모든 직원의 사번, 이름, 입사일자 조회
+
+2. SELECT empno, ename, deptno, sal, comm FROM emp
+WHERE (sal, comm) IN(SELECT sal, comm FROM emp WHERE deptno=30);
+이 쿼리에서 보너스가 null인 사람도 출력될 수 있도록 수정하시오.
+
+3. 평균 급여 이상을 받는 직원들의  사번, 이름을 조회. 단, 급여가 많은 순으로 정렬
+
+4. 이름에 T자가 들어가는 직원이 근무하는 부서에서 근무하는 직원의 사번,이름, 급여 조회
+
+5. 부서의 위치가 dallas인 모든 직원에 대해 사번, 이름, 급여, 업무조회
+
+6. King에게 보고하는 모든 직원의 이름과 부서, 업무, 급여를 조회
+
+7. 급여가 30번 부서의 최저급여보다 높은 직원의 사번, 이름, 급여 조회
+
+8. 10번부서에서 30번 부서의 직원과 같은 업무를 하는 직원의 이름과 업무를 조회
+```
+
 
 
 
