--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -326,7 +326,9 @@ SELECT deptno FROM scott_dept;
 		- FOREIGN KEY
 
 <br>
-### PRIMARY KEY
+
+### PRIMARY KEY (NN & ND)
+
 ```sql
 CREATE TABLE tableEXAM( 
 	id	int, 
@@ -377,7 +379,7 @@ CREATE TABLE tableEXAM(
 ALTER TABLE tableEXAM MODIFY name varchar(10) null;
 ALTER TABLE tableEXAM ADD age int null;
 ```
-### UNIQUE
+### UNIQUE (ND)
 
 ```sql
 -- UNIQUE: ND 속성을 지켜줌
@@ -392,6 +394,7 @@ ALTER TABLE tableEXAM ADD CONSTRAINT uk_name UNIQUE(name);
 
 INSERT INTO tableEXAM(id, name, age) VALUES(1, 'kimmy', 20);
 
+-- ND
 INSERT INTO tableEXAM(id, name, age) VALUES(1, 'lee', 20);
 	-> ERROR 1062 (23000): Duplicate entry '1' for key 'uk_id'
 INSERT INTO tableEXAM(id, name, age) VALUES(2, 'kimmy', 20);
@@ -416,7 +419,7 @@ CREATE TABLE tableEXAM(
 	id	int	AUTO_INCREMENT, 
 	name varchar(10) DEFAULT 'no name', 
 	age int	DEFAULT 20,
-    CONSTRAINT uk_id UNIQUE(id)
+	CONSTRAINT uk_id UNIQUE(id)
 );
 
 INSERT INTO tableEXAM(name, age) VALUES ('scott', 20);
@@ -424,11 +427,11 @@ INSERT INTO tableEXAM(age) VALUES (30);
 INSERT INTO tableEXAM(name) VALUES ('miller');
 ```
 
-### FOREIGN KEY
+### FOREIGN KEY (NC)
 ```sql
 CREATE TABLE tableDEPT(
 	deptno int,
-    dname varchar(10)
+	dname varchar(10)
 );
 
 INSERT INTO tableDEPT VALUES(100, 'SALES');
@@ -437,9 +440,9 @@ INSERT INTO tableDEPT VALUES(102, 'RESEARCH');
 
 CREATE TABLE tableEMP(
 	empno int,
-    ename varchar(20),
-    hiredate datetime,
-    deptno int
+	ename varchar(20),
+	hiredate datetime,
+	deptno int
 );
 
 -- deptno에 제약이 없으면 참조키를 달 수 없음
@@ -450,6 +453,60 @@ ADD CONSTRAINT fk_deptno FOREIGN KEY(deptno)
 REFERENCES tableDEPT(deptno);
 
 INSERT INTO tableEMP(empno, ename, hiredate, deptno) VALUES(1, 'scott', now(), 103);
-	-> ERROR 1452 (23000): Cannot add or update a child row: a foreign key constraint fails 
+	-> ERROR 1452 (23000): Cannot add or update a child row: a foreign key constraint fails
+
+INSERT INTO tableEMP(empno, ename, hiredate, deptno) VALUES(1, 'scott', now(), 102);
+	-> Query OK, 1 row affected
+
+-- NC
+UPDATE tableDEPT SET deptno=1002 WHERE deptno=102;
+	-> ERROR 1451 (23000): Cannot delete or update a parent row: a foreign key constraint fails
+
+-- NC (삭제 x)
+DROP TABLE tableDEPT;
+	-> ERROR 1217 (23000): Cannot delete or update a parent row: a foreign key constraint fails
 ```
 
+### 연습문제
+| column name  	| post1 	| post2 	| addr                        	|
+|---------------|---------  |-----------|-------------------------------|
+| key type     	|   PK    	| PK       	|                             	|
+| nulls/unique 	|       	|       	| NN                          	|
+| max length   	| 3     	| 3     	| 60                          	|
+| sample       	|       	|       	| seoul, south korea        	|
+
+
+<br>
+
+| column name   	| id   	| name    	| sex  	| jumin1 	| jumin2  	| tel      	| post1 	| post2 	| addr    	|
+|---------------	|------	|---------	|------	|--------	|---------	|----------	|-------	|-------	|---------	|
+| key type      	| PK   	|         	|      	|        	|         	|          	| FK    	| FK       	|         	|
+| nulls/unique  	|      	| NN      	|      	| UK     	|UK        	|          	|       	|       	|         	|
+| FK ref table  	|      	|         	|      	|        	|         	|          	| POST  	|       	|         	|
+| FK ref column 	|      	|         	|      	|        	|         	|          	| post1 	| post2 	|         	|
+| data type     	| INT  	| VARCHAR 	| CHAR 	| CHAR   	| CHAR    	| VARCHAR  	| CHAR  	| CHAR  	| VARCHAR 	|
+| max length    	| 4    	| 10      	| 1    	| 6      	| 7       	| 15       	| 3     	| 3     	| 60      	|
+| sample        	| 1234 	| hgd   	| 1    	| 990101 	| 1232344 	| 712-1234 	| 100   	| 010   	|         	|
+
+```sql
+CREATE TABLE POST(
+	post1 char(3),
+	post2 char(3),
+	addr varchar(60) DEFAULT 'no addr',
+	CONSTRAINT pk_post PRIMARY KEY(post1, post2)
+);
+
+CREATE TABLE MEMBER(
+	id int(4) PRIMARY KEY,
+	name varchar(10) DEFAULT 'kimmy',
+	sex char(1), 
+	jumin1 char(6),
+	jumin2 char(7),
+	tel varchar(15),
+	post1 char(3),
+	post2 char(3),
+	addr varchar(60)
+);
+ALTER TABLE MEMBER ADD CONSTRAINT uk_jumin UNIQUE(jumin1, jumin2);
+ALTER TABLE MEMBER ADD CONSTRAINT fk_post FOREIGN KEY(post1, post2) REFERENCES POST(post1, post2);
+```
