--- a/_posts/2019-04-01-SQL(4).md
+++ b/_posts/2019-04-01-SQL(4).md
@@ -83,3 +83,150 @@ INSERT INTO vw30 VALUES(1, 'john', 2500, 'developer');
 ```
 
 ## 9. INDEX
+```sql
+1. CREATE INDEX indexname ON tablename(fieldname)
+2. 제약을 통해 생성
+```
+```sql
+CREATE TABLE tableINDEX(
+    id  int,
+    name varchar(10),
+    point float
+);
+
+INSERT INTO tableINDEX values(5, 'scott', 2.3);
+INSERT INTO tableINDEX values(2, 'adam', 6.4);
+INSERT INTO tableINDEX values(7, 'john', 4.2);
+INSERT INTO tableINDEX values(1, 'tom', 7.9);
+
+SELECT * from tableINDEX;
+
+CREATE INDEX idx_point ON tableINDEX(point);
+
+SELECT * FROM tableINDEX WHERE point>=4;
+
+-- alot faster after making index
+EXPLAIN SELECT * FROM tableINDEX WHERE point>=4;
+```
+
+```
++----+-------------+------------+------------+-------+---------------+-----------+---------+------+------+----------+-----------------------+
+| id | select_type | table      | partitions | type  | possible_keys | key       | key_len | ref  | rows | filtered | Extra                 |
++----+-------------+------------+------------+-------+---------------+-----------+---------+------+------+----------+-----------------------+
+|  1 | SIMPLE      | tableINDEX | NULL       | range | idx_point     | idx_point | 5       | NULL |    2 |   100.00 | Using index condition |
++----+-------------+------------+------------+-------+---------------+-----------+---------+------+------+----------+-----------------------+
+```
+```sql
+EXPLAIN SELECT * FROM tableINDEX WHERE id>=4;
+```
+```
++----+-------------+------------+------------+------+---------------+------+---------+------+------+----------+-------------+
+| id | select_type | table      | partitions | type | possible_keys | key  | key_len | ref  | rows | filtered | Extra       |
++----+-------------+------------+------------+------+---------------+------+---------+------+------+----------+-------------+
+|  1 | SIMPLE      | tableINDEX | NULL       | ALL  | NULL          | NULL | NULL    | NULL |    4 |    33.33 | Using where |
++----+-------------+------------+------------+------+---------------+------+---------+------+------+----------+-------------+
+```
+```sql
+DROP INDEX idx_point ON tableINDEX;
+```
+```sql
+ALTER TABLE tableINDEX ADD CONSTRAINT pk_id PRIMARY KEY(id);
+```
+
+## 10. TRANSACTION
+- ALL OR NOTHING
+- ROLLBACK: commit 한 시점으로 돌아감
+- COMMIT
+- DML 작업만 기록 (DDL x) 
+- 동기화 작업 수행
+- ACID: 원자성, 일관성, 고립성, 지속성
+  
+
+```sql
+SELECT @@autocommit;
+```
+```
++--------------+
+| @@autocommit |
++--------------+
+|            1 |
++--------------+
+```
+```sql
+SET @@autocommit=false;
+SELECT @@autocommit;
+```
+```
++--------------+
+| @@autocommit |
++--------------+
+|            0 |
++--------------+
+```
+```sql
+DELETE FROM tableINDEX;
+ROLLBACK;
+SELECT * FROM tableINDEX;
+```
+```
++----+-------+-------+
+| id | name  | point |
++----+-------+-------+
+|  1 | tom   |   7.9 |
+|  2 | adam  |   6.4 |
+|  5 | scott |   2.3 |
+|  7 | john  |   1.2 |
++----+-------+-------+
+```
+```sql
+DELETE FROM tableINDEX;
+COMMIT;
+ROLLBACK;
+SELECT * FROM tableINDEX;
+    -> Empty set
+```
+```sql
+-- 동기화 작업
+/* open 2 consoles */
+SELECT * from tableEXAM;
+```
+```
++----+---------+------+
+| id | name    | age  |
++----+---------+------+
+|  1 | scott   |   20 |
+|  2 | no name |   30 |
+|  3 | miller  |   20 |
++----+---------+------+
+```
+```sql
+UPDATE tableEXAM
+SET age=40
+WHERE id=1;
+SELECT * FROM tableEXAM;
+```
+```
+-- 실행한 콘솔창
++----+---------+------+
+| id | name    | age  |
++----+---------+------+
+|  1 | scott   |   40 |
+|  2 | no name |   30 |
+|  3 | miller  |   20 |
++----+---------+------+
+
+-- 다른 콘솔창: 아직 업데이트 적용이 안됨
++----+---------+------+
+| id | name    | age  |
++----+---------+------+
+|  1 | scott   |   20 |
+|  2 | no name |   30 |
+|  3 | miller  |   20 |
++----+---------+------+
+```
+```sql
+COMMIT;
+SELECT * FROM tableEXAM;
+    -> 두 콘솔창 모두 scott의 age가 바뀜
+```
+
