--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "SQL (3)"
-description: "Join"
+description: "Join, Integrity"
 date: 2019-03-29
-tags: [SQL]
+tags: [SQL, SQL JOIN, SQL INTEGRITY]
 category: SQL
 comments: true
 share: true
