--- a/_posts/2019-04-01-SQL(4).md
+++ b/_posts/2019-04-01-SQL(4).md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "SQL (4)"
-description: "VIEW"
+description: "View, Index, Transcation"
 date: 2019-04-01
-tags: [SQL, VIEW]
+tags: [SQL, SQL VIEW, SQL INDEX, SQL TRANSACTION]
 category: SQL
 comments: true
 share: true
@@ -84,8 +84,8 @@ INSERT INTO vw30 VALUES(1, 'john', 2500, 'developer');
 
 ## 9. INDEX
 ```sql
-1. CREATE INDEX indexname ON tablename(fieldname)
-2. 제약을 통해 생성
+-- 제약을 통해 생성
+CREATE INDEX indexname ON tablename(fieldname)
 ```
 ```sql
 CREATE TABLE tableINDEX(
@@ -227,6 +227,16 @@ SELECT * FROM tableEXAM;
 ```sql
 COMMIT;
 SELECT * FROM tableEXAM;
-    -> 두 콘솔창 모두 scott의 age가 바뀜
+```
+```
+-- 두 콘솔창 모두 scott의 age가 바뀜
+-- 다른 콘솔창
++----+---------+------+
+| id | name    | age  |
++----+---------+------+
+|  1 | scott   |   40 |
+|  2 | no name |   30 |
+|  3 | miller  |   20 |
++----+---------+------+
 ```
 
