--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -3,8 +3,8 @@ layout: post
 title: "SQL (1)"
 description: ""
 date: 2019-03-27
-tags: [SQL]
-category: SQL
+tags: [SQL, SQL SELECT, SQL ORDER BY, SQL WHERE, SQL LIKE, SQL FUNCTIONS]
+category: Select, Order by, Where, Like, Functions
 comments: true
 share: true
 ---
@@ -47,7 +47,7 @@ SHOW databases;
 ```
 ```sql
 USE dbexample;
-SOURCE C:/('path where the file is saved')/scott.sql
+SOURCE C:/'path where the file is saved'/scott.sql
 SHOW tables;
 ```
 ```
@@ -79,10 +79,12 @@ DESC scott_emp;
 ```
 
 ## 1. SELECT
-- SELECT 절: 검색하고자 하는 필드명
-	 FROM 절: 테이블명
-- 실행순서: from 절 -> select 절
+- 실행순서: FROM 절 -> SELECT 절
 
+```sql
+SELECT fieldnames
+FROM tablename;
+```
 ```sql
 -- field의 가공처리
 SELECT empno, ename, sal+100 FROM scott_emp;
@@ -174,12 +176,14 @@ SELECT distinct job FROM scott_emp;
 
 ## 2. 확장 문법
 #### 2.1. 정렬 기능: ORDER BY
-- SELECT 절
-	FROM 절
-	ORDER BY 절
-- 실행순서: from 절 -> select 절 -> order by 절
-**Note: 정렬 기능은 항상 제일 마지막에**
+- 실행순서: FROM 절 -> SELECT 절 -> ORDER BY 절
+- **Note: 정렬 기능은 항상 제일 마지막에**
 
+```sql
+SELECT fieldnames
+FROM tablename
+ORDER BY fieldnames;
+```
 ```sql
 -- 급여가 많은 순 (내림차순 - DESC) 으로 이름, 급여, 부서코드를 조회
 SELECT ename, sal, deptno 
@@ -234,11 +238,13 @@ ORDER BY deptno, sal;
 ```
 
 #### 2.2. 조건 기능 (레코드 필터링): WHERE 
-- SELECT 절
-	FROM 절
-	WHERE 절
-- 실행순서: from 절 -> where 절 -> select 절
+- 실행순서: FROM 절 -> WHERE 절 -> SELECT 절
   
+```sql
+SELECT fieldnames
+FROM tablename
+WHERE blah blah
+```
 ```sql
 -- 급여가 3000$ 이상인 직원의 사번, 이름, 급여를 조회
 SELECT empno, ename, sal 
@@ -258,7 +264,7 @@ WHERE sal >= 3000;
 -- 업무가 manager인 직원의 이름, 부서, 업무, 급여 조회
 SELECT empno, ename, sal 
 FROM scott_emp
-WHERE job='manager';
+WHERE job = 'manager';
 ```
 ```
 +-------+-------+------+
@@ -273,7 +279,7 @@ WHERE job='manager';
 -- 부서가 20이고 업무가 analyst인 직원의 이름, 부서, 업무, 급여 조회
 SELECT ename, deptno, job, sal 
 FROM scott_emp
-WHERE deptno=20 AND job='Analyst';
+WHERE deptno = 20 AND job = 'Analyst';
 ```
 ```
 +-------+--------+---------+------+
@@ -290,6 +296,7 @@ FROM scott_emp
 WHERE sal >= 1500 AND sal <= 2000
 ORDER BY sal DESC;
 
+-- !!Note: BETWEEN AND는 '이상, 이하' 일 때만 쓸 수 있음
 SELECT ename, deptno, job, sal 
 FROM scott_emp
 WHERE sal BETWEEN 1500 AND 2000;
@@ -301,14 +308,14 @@ WHERE sal BETWEEN 1500 AND 2000;
 | ALLEN  |     30 | SALESMAN | 1600 |
 | TURNER |     30 | SALESMAN | 1500 |
 +--------+--------+----------+------+
--- !!Note: BETWEEN AND는 '이상, 이하' 일 때만 쓸 수 있음
 ```
 ```sql
 -- 업무가 clerk, salesman, analyst인 직원의 이름, 부서, 업무, 급여 조회
 SELECT ename, deptno, job, sal 
 FROM scott_emp
-WHERE job='clerk' OR job='salesman' OR job='analyst';
+WHERE job = 'clerk' OR job = 'salesman' OR job = 'analyst';
 
+-- !!Note: IN은 'OR 조건' 일 때만 쓸 수 있음
 SELECT ename, deptno, job, sal 
 FROM scott_emp
 WHERE job IN ('clerk', 'salesman', 'analyst');
@@ -328,10 +335,10 @@ WHERE job IN ('clerk', 'salesman', 'analyst');
 | FORD   |     20 | ANALYST  | 3000 |
 | MILLER |     10 | CLERK    | 1300 |
 +--------+--------+----------+------+
--- !!Note: IN은 'OR 조건' 일 때만 쓸 수 있음
 ```
 ```sql
 -- 1982/01/01 이후에 입사한 직원의 이름, 업무, 입사일자 조회
+-- Note: SQL에서 날짜는 문자열 형식, 날짜형식만 유지하면 구분자는 상관없음
 SELECT ename, job, hiredate 
 FROM scott_emp
 WHERE hiredate > '1982-01-01';
@@ -346,7 +353,6 @@ WHERE hiredate > '1982,01,01';
 | ADAMS  | CLERK   | 1987-05-23 00:00:00 |
 | MILLER | CLERK   | 1982-01-23 00:00:00 |
 +--------+---------+---------------------+
--- Note: SQL에서 날짜는 문자열 형식, 날짜형식만 유지하면 구분자는 상관없음
 ```
 ```sql
 -- 커미션이 없는 직원의 이름, 부서, 업무, 급여, 커미션 조회
@@ -402,7 +408,7 @@ WHERE comm >= 0;
 - 예시: beau__ - beauab, beauti, beaufl ..
 
 ```sql
--- 이름이 s로 시작하는 직원의 이름, 업무, 급여를 조회
+-- 이름이 s로 끝나는 직원의 이름, 업무, 급여를 조회
 SELECT ename, job, sal FROM scott_emp
 	WHERE ename like '%s';
 ```
@@ -416,7 +422,7 @@ SELECT ename, job, sal FROM scott_emp
 +-------+---------+------+
 ```
 
-#### 연습문제
+### 연습문제
 ```sql
 -- 1. 1981년에 입사한 사람의 이름, 업무, 입사일자 조회
 SELECT ename, job, hiredate 
@@ -454,7 +460,7 @@ WHERE comm >= sal*0.1;
 ## 3. 함수
 #### 3.1. Single-Row Function
 - String Function:
-	- ASCII(), CHAR()
+	- ASCII( ), CHAR()
 	- LENGTH()
 	- INSTR()
 	- LEFT(), RIGHT(), SUBSTR(), SUBSTRING()
@@ -462,32 +468,29 @@ WHERE comm >= sal*0.1;
 
 ```sql
 SELECT ASCII('a');
-	-> 97
+	--> 97
 SELECT CHAR(98);
-	-> b
-```
-```sql
+	--> b
+
 SELECT LENGTH(ename) FROM scott_emp;
-```
-```sql
+
 SELECT INSTR('foobarbar', 'bar');
-	-> 4
+	--> 4
 SELECT INSTR('foobarbar', 'love');
-	-> 0
-```
-```sql
+	--> 0
+
 SELECT LEFT('abcdefg', 3);
-	-> abc
+	--> abc
 SELECT RIGHT('abcdefg', 4);
-	-> defg
+	--> defg
 SELECT SUBSTRING('i lovee SQL', 3);
-	-> lovee SQL
+	--> lovee SQL
 SELECT SUBSTRING('i lovee SQL', 3, 4);
-	-> love
+	--> love
 SELECT SUBSTRING('i lovee sql', -3);
-	-> sql
+	--> sql
 SELECT SUBSTRING('i lovee sql', -9, 5);
-	-> lovee
+	--> lovee
 ```
 
 - Numeric Function
@@ -497,19 +500,20 @@ SELECT SUBSTRING('i lovee sql', -9, 5);
   
 ```sql
 SELECT CEIL(1.23);
-	-> 2
+	--> 2
 SELECT FLOOR(1.73);
-	-> 1
+	--> 1
 SELECT ROUND(1.23), ROUND(1.73);
-	-> 1 | 2
+	--> 1 | 2
 SELECT ROUND(1.298, 1);
-	-> 1.3
+	--> 1.3
 SELECT TRUNCATE(1.73, 0);
-	-> 1
+	--> 1
 ```
 
 - Date Function
 	- NOW(), SYSDATE(), CURDATE(), CURTIME()
+	- YEAR(), MONTH(), DAYOFMONTH()
 	- DAYOFWEEK(): 1-일요일, WEEKDAY(): 0-월요일
 	- DAOFYEAR(): 1년 중 며칠이 지났는지 알려줌
 	- DATE_ADD(), DATE_SUB()
@@ -524,7 +528,6 @@ SELECT NOW();
 | 2019-03-27 16:37:04 |
 +---------------------+
 ```
-	- YEAR(), MONTH(), DAYOFMONTH()
 ```sql
 SELECT YEAR(NOW()), MONTH(NOW());
 ```
@@ -566,8 +569,6 @@ SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
 +----------------------------------+---------------------------------+
 ```
 
-
-
 #### 3.2. Aggregation Function
 - SUM(), AVG(), COUNT(), MAX(), MIN()
 
@@ -584,10 +585,10 @@ SELECT CONVERT('14:06:10', TIME);
 ```sql
 -- 업무가 salesman이면 'yes' 이라고하고, 그 외 업무는 'no' 라고 조회
 SELECT ename, job, comm,
-	CASE
-    	WHEN job='salesman' THEN 'yes'
+	CASE 
+		WHEN job='salesman' THEN 'yes'
 		ELSE 'no'
-    END iscomm
+	END iscomm
 FROM scott_emp;
 ```
 ```
