--- a/_posts/2019-04-01-SQL(4).md
+++ b/_posts/2019-04-01-SQL(4).md
@@ -65,9 +65,9 @@ AS
 
 -- deptno 지정을 안해줘서 vw30에 insert 되지 않고 scott_emp table에만 insert 됨
 INSERT INTO vw30 VALUES(1, 'john', 2500, 'developer');
+DESC scott_emp;
 ```
 ```
--- scott_emp table
 +----------+-------------+------+-----+---------+-------+
 | Field    | Type        | Null | Key | Default | Extra |
 +----------+-------------+------+-----+---------+-------+
