--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -1,82 +1,13 @@
 ---
 layout: post
 title: "SQL (1)"
-description: ""
+description: "Select"
 date: 2019-03-27
 tags: [SQL, SQL SELECT, SQL ORDER BY, SQL WHERE, SQL LIKE, SQL FUNCTIONS]
 category: Select, Order by, Where, Like, Functions
 comments: true
 share: true
 ---
-
-##  Basic Commands
-```sql
-mysql -uroot -p
-Enter password: ****
-
-set linesize 200
-set pagesize 200
-
-SHOW databases;
-USE world;
-SHOW tables;
-DESC country;
-SELECT name, capital FROM country;
-```
-
-## SCOTT
-- Download scott.sql
-
-```sql
-CREATE database dbExample;
-SHOW databases;
-```
-```
-+--------------------+
-| Database           |
-+--------------------+
-| information_schema |
-| dbexample          |
-| mysql              |
-| performance_schema |
-| sakila             |
-| sample             |
-| sys                |
-| world              |
-+--------------------+
-```
-```sql
-USE dbexample;
-SOURCE C:/'path where the file is saved'/scott.sql
-SHOW tables;
-```
-```
-+---------------------+
-| Tables_in_dbexample |
-+---------------------+
-| scott_bonus         |
-| scott_dept          |
-| scott_emp           |
-| scott_salgrade      |
-+---------------------+
-```
-```sql
-DESC scott_emp;
-```
-```
-+----------+-------------+------+-----+---------+-------+
-| Field    | Type        | Null | Key | Default | Extra |
-+----------+-------------+------+-----+---------+-------+
-| EMPNO    | int(11)     | NO   | PRI | NULL    |       |
-| ENAME    | varchar(10) | YES  |     | NULL    |       |
-| JOB      | varchar(9)  | YES  |     | NULL    |       |
-| MGR      | int(11)     | YES  |     | NULL    |       |
-| HIREDATE | datetime    | YES  |     | NULL    |       |
-| SAL      | double      | YES  |     | NULL    |       |
-| COMM     | double      | YES  |     | NULL    |       |
-| DEPTNO   | int(11)     | YES  | MUL | NULL    |       |
-+----------+-------------+------+-----+---------+-------+
-```
 
 ## 1. SELECT
 - 실행순서: FROM 절 -> SELECT 절
@@ -85,6 +16,8 @@ DESC scott_emp;
 SELECT fieldnames
 FROM tablename;
 ```
+<br>
+
 ```sql
 -- field의 가공처리
 SELECT empno, ename, sal+100 FROM scott_emp;
@@ -109,6 +42,8 @@ SELECT empno, ename, sal+100 FROM scott_emp;
 |  7934 | MILLER |    1400 |
 +-------+--------+---------+
 ```
+<br>
+
 ```sql
 -- field alias
 SELECT empno, ename, mgr manager FROM scott_emp;
@@ -135,6 +70,8 @@ SELECT empno, ename, mgr as 'my manager' FROM scott_emp;
 |  7934 | MILLER |       7782 |
 +-------+--------+------------+
 ```
+<br>
+
 ```sql
 -- 중복 제거: distinct
 SELECT job FROM scott_emp;
@@ -173,9 +110,10 @@ SELECT distinct job FROM scott_emp;
 | PRESIDENT |
 +-----------+
 ```
+<br>
 
 ## 2. 확장 문법
-#### 2.1. 정렬 기능: ORDER BY
+### 2.1. 정렬 기능: ORDER BY
 - 실행순서: FROM 절 -> SELECT 절 -> ORDER BY 절
 - **Note: 정렬 기능은 항상 제일 마지막에**
 
@@ -184,8 +122,10 @@ SELECT fieldnames
 FROM tablename
 ORDER BY fieldnames;
 ```
+<br>
+
 ```sql
--- 급여가 많은 순 (내림차순 - DESC) 으로 이름, 급여, 부서코드를 조회
+-- 급여가 많은 순으로 이름, 급여, 부서코드를 조회
 SELECT ename, sal, deptno 
 FROM scott_emp
 ORDER BY sal DESC;
@@ -210,8 +150,10 @@ ORDER BY sal DESC;
 | SMITH  |  800 |     20 |
 +--------+------+--------+
 ```
+<br>
+
 ```sql
--- 부서별로 급여가 적은 순 (오름차순 - ASC) 으로 이름, 급여, 부서코드 조회
+-- 부서별로 급여가 적은 순으로 이름, 급여, 부서코드 조회
 SELECT ename, sal, deptno 
 FROM scott_emp
 ORDER BY deptno, sal;
@@ -236,8 +178,9 @@ ORDER BY deptno, sal;
 | BLAKE  | 2850 |     30 |
 +--------+------+--------+
 ```
+<br>
 
-#### 2.2. 조건 기능 (레코드 필터링): WHERE 
+### 2.2. 조건 기능 (레코드 필터링): WHERE 
 - 실행순서: FROM 절 -> WHERE 절 -> SELECT 절
   
 ```sql
@@ -245,6 +188,8 @@ SELECT fieldnames
 FROM tablename
 WHERE blah blah
 ```
+<br>
+
 ```sql
 -- 급여가 3000$ 이상인 직원의 사번, 이름, 급여를 조회
 SELECT empno, ename, sal 
@@ -260,6 +205,8 @@ WHERE sal >= 3000;
 |  7902 | FORD  | 3000 |
 +-------+-------+------+
 ```
+<br>
+
 ```sql
 -- 업무가 manager인 직원의 이름, 부서, 업무, 급여 조회
 SELECT empno, ename, sal 
@@ -275,6 +222,8 @@ WHERE job = 'manager';
 |  7782 | CLARK | 2450 |
 +-------+-------+------+
 ```
+<br>
+
 ```sql
 -- 부서가 20이고 업무가 analyst인 직원의 이름, 부서, 업무, 급여 조회
 SELECT ename, deptno, job, sal 
@@ -289,6 +238,8 @@ WHERE deptno = 20 AND job = 'Analyst';
 | FORD  |     20 | ANALYST | 3000 |
 +-------+--------+---------+------+
 ```
+<br>
+
 ```sql
 -- 급여가 1500 이상 2500 미만을 받는 직원의 이름, 부서, 업무 급여를 조회 (단, 급여가 많은 순으로 조회)
 SELECT ename, deptno, job, sal 
@@ -309,6 +260,8 @@ WHERE sal BETWEEN 1500 AND 2000;
 | TURNER |     30 | SALESMAN | 1500 |
 +--------+--------+----------+------+
 ```
+<br>
+
 ```sql
 -- 업무가 clerk, salesman, analyst인 직원의 이름, 부서, 업무, 급여 조회
 SELECT ename, deptno, job, sal 
@@ -336,6 +289,8 @@ WHERE job IN ('clerk', 'salesman', 'analyst');
 | MILLER |     10 | CLERK    | 1300 |
 +--------+--------+----------+------+
 ```
+<br>
+
 ```sql
 -- 1982/01/01 이후에 입사한 직원의 이름, 업무, 입사일자 조회
 -- Note: SQL에서 날짜는 문자열 형식, 날짜형식만 유지하면 구분자는 상관없음
@@ -354,15 +309,13 @@ WHERE hiredate > '1982,01,01';
 | MILLER | CLERK   | 1982-01-23 00:00:00 |
 +--------+---------+---------------------+
 ```
+<br>
+
 ```sql
 -- 커미션이 없는 직원의 이름, 부서, 업무, 급여, 커미션 조회
 SELECT ename, empno, job, sal, comm 
 FROM scott_emp
 WHERE comm IS null;
-
-SELECT ename, empno, job, sal, comm 
-FROM scott_emp
-WHERE job != 'salesman';
 ```
 ```
 +--------+-------+-----------+------+------+
@@ -380,6 +333,8 @@ WHERE job != 'salesman';
 | MILLER |  7934 | CLERK     | 1300 | NULL |
 +--------+-------+-----------+------+------+
 ```
+<br>
+
 ```sql
 -- 커미션이 있는 직원
 SELECT ename, empno, job, sal, comm 
@@ -400,8 +355,9 @@ WHERE comm >= 0;
 | TURNER |  7844 | SALESMAN | 1500 |    0 |
 +--------+-------+----------+------+------+
 ```
+<br>
 
-#### 2.3. Like 연산자
+### 2.3. Like 연산자
 - % : 0개 이상의 문자 대체
 - _ : 1개 문자 대체
 - 예시: beau% - beau, beaut, beauti, ..
@@ -421,6 +377,47 @@ SELECT ename, job, sal FROM scott_emp
 | JAMES | CLERK   |  950 |
 +-------+---------+------+
 ```
+<br>
+
+### 2.4. GROUP BY & HAVING 조건
+- Group by 절: 특정 컬럼 값을 기준으로 그룹화
+- Having 절: 그룹으로 묶은 뒤, 조건이 있는 경우
+```sql
+-- 부서별로 급여 평균, 최저 급여 조회
+SELECT deptno, round(avg(sal)), round(min(sal))
+FROM scott_emp
+GROUP BY deptno;
+
+-- 부서별로 급여 평균, 최저 급여 조회 (급여 평균이 높은 순으로)
+SELECT deptno, round(avg(sal)), round(min(sal))
+FROM scott_emp
+GROUP BY deptno
+ORDER BY avg(sal) DESC;
+```
+<br>
+
+```sql
+-- 전체 급여의 합계가 5000을 초과하는 업무에 대해서 급여 합계 조회
+SELECT job, sum(sal) 
+FROM scott_emp
+/* WHERE sum(sal) > 5000 오류발생 */
+GROUP BY job
+HAVING sum(sal) > 5000;
+
+-- 전체 급여의 합계가 5000을 초과하는 업무에 대해서 급여 합계 조회 (단, salesman 제외)
+-- 두 방식에 성능 차이가 있을 수 있음 (아래 방식이 성능이 더 좋을 수 있을 수도)
+SELECT job, sum(sal) 
+FROM scott_emp
+GROUP BY job
+HAVING sum(sal) > 5000 AND job <> 'salesman';
+
+SELECT job, sum(sal) 
+FROM scott_emp
+WHERE job <> 'salesman'
+GROUP BY job
+HAVING sum(sal) > 5000;
+```
+<br>
 
 ### 연습문제
 ```sql
@@ -432,7 +429,7 @@ WHERE hiredate > '1981-01-01' AND hiredate < '1981-12-31';
 -- 2. 사번이 7902, 7788, 7566인 사원의 이름, 업무, 급여, 입사일자 조회
 SELECT ename, job, hiredate 
 FROM scott_emp
-WHERE empno IN 7902, 7788, 7566);
+WHERE empno IN (7902, 7788, 7566);
 
 -- 3. 업무가 manager, clerk, analyst가 아닌 직원의 이름, 업무, 급여, 부서번호 조회
 SELECT ename, job, empno 
@@ -442,7 +439,7 @@ WHERE job NOT IN ('manager', 'clerk', 'analyst');
 -- 4. 업무가 president 또는 salesman이고 급여가 1500인 직원의 이름, 급여, 업무, 부서번호 조회
 SELECT ename, sal, job, empno 
 FROM scott_emp
-WHERE job IN ('president', 'salesman') AND sal=1500;
+WHERE job IN ('president', 'salesman') AND sal = 1500;
 
 -- 5. 가장 최근에 입사한 직원의 이름, 부서, 업무, 입사일자 조회 (현재 검색 일자가 1987년이라 가정)
 SELECT ename, deptno, job, max(hiredate) 
@@ -458,7 +455,7 @@ WHERE comm >= sal*0.1;
 ```
 
 ## 3. 함수
-#### 3.1. Single-Row Function
+### 3.1. Single-Row Function (단일행 함수)
 - String Function:
 	- ASCII( ), CHAR()
 	- LENGTH()
@@ -492,6 +489,7 @@ SELECT SUBSTRING('i lovee sql', -3);
 SELECT SUBSTRING('i lovee sql', -9, 5);
 	--> lovee
 ```
+<br>
 
 - Numeric Function
 	- CEIL(), FLOOR(), ROUND(), TRUNCATE()
@@ -510,15 +508,11 @@ SELECT ROUND(1.298, 1);
 SELECT TRUNCATE(1.73, 0);
 	--> 1
 ```
+<br>
 
 - Date Function
-	- NOW(), SYSDATE(), CURDATE(), CURTIME()
-	- YEAR(), MONTH(), DAYOFMONTH()
-	- DAYOFWEEK(): 1-일요일, WEEKDAY(): 0-월요일
-	- DAOFYEAR(): 1년 중 며칠이 지났는지 알려줌
-	- DATE_ADD(), DATE_SUB()
-
 ```sql
+-- NOW(), SYSDATE(), CURDATE(), CURTIME()
 SELECT NOW();
 ```
 ```
@@ -529,6 +523,7 @@ SELECT NOW();
 +---------------------+
 ```
 ```sql
+-- YEAR(), MONTH(), DAYOFMONTH()
 SELECT YEAR(NOW()), MONTH(NOW());
 ```
 ```
@@ -539,6 +534,7 @@ SELECT YEAR(NOW()), MONTH(NOW());
 +-------------+--------------+
 ```
 ```sql
+-- DAYOFWEEK(): 1-일요일, WEEKDAY(): 0-월요일
 SELECT DAYOFWEEK(NOW()), WEEKDAY(NOW());
 ```
 ```
@@ -549,6 +545,7 @@ SELECT DAYOFWEEK(NOW()), WEEKDAY(NOW());
 +------------------+----------------+
 ```
 ```sql
+-- DAOFYEAR(): 1년 중 며칠이 지났는지 알려줌
 SELECT DAYOFYEAR(NOW());
 ```
 ```
@@ -559,6 +556,7 @@ SELECT DAYOFYEAR(NOW());
 +------------------+
 ```
 ```sql
+-- DATE_ADD(), DATE_SUB()
 SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
 ```
 ```
@@ -568,21 +566,21 @@ SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
 | 2024-03-27 16:48:21              | 2019-04-01 16:48:21             |
 +----------------------------------+---------------------------------+
 ```
+<br>
 
-#### 3.2. Aggregation Function
+### 3.2. Aggregation Function
 - SUM(), AVG(), COUNT(), MAX(), MIN()
 
-#### 3.3. 기타
-- CONVERT()
-  
+### 3.3. 기타
 ```sql
+-- CONVERT()
 SELECT CONVERT('2019-5-1', DATE);
 SELECT CONVERT(150, CHAR);
 SELECT CONVERT('14:06:10', TIME);
 ```
-- CASE()
   
 ```sql
+-- CASE()
 -- 업무가 salesman이면 'yes' 이라고하고, 그 외 업무는 'no' 라고 조회
 SELECT ename, job, comm,
 	CASE 
@@ -611,17 +609,18 @@ FROM scott_emp;
 | MILLER | CLERK     | no     |
 +--------+-----------+--------+
 ```
-- COALESCE()
-  
+
 ```sql
+-- COALESCE()
 -- 현재 직원들의 총 급여를 조회
 SELECT empno, ename, sal, comm, (sal+comm) as total FROM scott_emp; --null값 처리가 안됨
 SELECT empno, ename, sal, comm,
 	(sal+COALESCE(comm, 0)) as total
 	FROM scott_emp;
 ```
+<br>
 
-#### 연습문제
+### 연습문제
 ```sql
 -- 1. 오늘부터 12월 25일까지 몇일이 남았는가?
 SELECT DATEDIFF('2019.12.25', NOW());
