--- a/_posts/2019-03-28-SQL(2).md
+++ b/_posts/2019-03-28-SQL(2).md
@@ -12,46 +12,38 @@ share: true
 ## 4. DML: INSERT, UPDATE, DELETE
 ```sql
 CREATE TABLE tableTest(
-	id	int	null  -- 비워놓아도 상관 x 
+    id	int	null  -- 비워놓아도 상관 x 
     name	varchar(10)  -- 이름 길이는 정해지지 x
     regdate	datetime
 );
 
 DROP table tableTest;
 ```
+<br>
 
-1. INSERT
-
-```sql
-INSERT INTO tablename (fieldname, ...) VALUES (values...)
-INSERT INTO tablename VALUES (values...)
-```
+#### INSERT
 ```sql
 INSERT INTO tableTest(id, name, regdate) VALUES (1, 'kimmy', '2019-03-26')
 INSERT INTO tableTest(id, regdate) VALUES (2, now())
 INSERT INTO tableTest VALUES 0;
-INSERT INTO tableTest VALUES (3, 'jimmy', now())
+INSERT INTO tableTest VALUES (3, 'sally', now())
 ```
+<br>
 
-2. UPDATE
-
-```sql
-UPDATE tablename
-SET field='value' [,field='value' ...]
-WHERE condition;
-```
+#### UPDATE
 ```sql
 UPDATE tableTest
-SET name='scott'
-WHERE id=3;
+SET name = 'scott'
+WHERE id = 3;
 ```
+<br>
 
-3. DELETE
-
+#### DELETE
 ```sql
-DELETE FROM tablename WHERE condition;
-DROP TABLE tablename;
+DELETE FROM tableTest WHERE id = 3;
+DROP TABLE tableTest;
 ```
+<br>
 
 ## 5. Sub Query
 - 다른 query문에 포함된 query문
@@ -110,9 +102,9 @@ WHERE sal IN (SELECT min(sal) FROM scott_emp GROUP BY job);
 -- note: FROM 절에서 SubQuery 사용 시, 테이블 이름이 사라진 경우 별명 꼭 붙이기
 SELECT * FROM(SELECT * FROM scott_emp WHERE deptno=30 ) as t;
 ```
+<br>
 
-- ANY: 단일행 연산자
-
+#### ANY: 단일행 연산자
 ```sql
 -- 업무별로 최소급여보다 많이 받는 직원의 사번, 이름, 부서코드를 조회
 SELECT empno, ename, deptno, sal FROM scott_emp
@@ -125,8 +117,9 @@ WHERE sal>800;
 SELECT empno, ename, deptno ,sal, job FROM scott_emp
 WHERE sal> ANY(SELECT min(sal) FROM scott_emp GROUP BY job);
 ```
+<br>
 
-- ALL: 다중행 연산자
+#### ALL: 다중행 연산자
 
 ```sql
 SELECT empno, ename, deptno, sal FROM scott_emp
@@ -135,8 +128,9 @@ WHERE sal>=3000 AND sal>=1300 AND sal>=2975 AND sal>=5000 AND sal>=1600;
 SELECT empno, ename, deptno ,sal, job FROM scott_emp
 WHERE sal>= ALL(SELECT max(sal) FROM scott_emp GROUP BY job);
 ```
+<br>
 
-- 다중열 비교
+#### 다중열 비교
 
 ```sql
 SELECT sal, comm FROM scott_emp WHERE ename='miller';
@@ -167,8 +161,8 @@ WHERE ename='miller';
 
 ### 상관 서브 쿼리
 - 밖에 있는 서브쿼리가 먼저 시작해서 밖에서 가져다 준 결과를 안으로 다시 처리
-- 상관서브쿼리는 서브쿼리만 실행시 실행되지 x
-  전체를 같이 실행시 서브쿼리도 같이 실행
+- 상관서브쿼리는 서브쿼리만 실행시 실행되지 x <br>
+  전체를 같이 실행시 서브쿼리도 같이 실행 <br>
   서브쿼리는 상관이 되어 있음 -> 퍼포먼스가 안좋음
 - 일반서브쿼리는 서브쿼리만 실행시 실행되지 x
 
@@ -182,6 +176,7 @@ WHERE empno=7902 OR empno=7698 OR empno=7839  OR empno=7566 OR empno=7782;
 SELECT ename, job, hiredate, sal FROM scott_emp as  e1
 WHERE exists (SELECT * FROM scott_emp as e2 WHERE e1.empno= e2.mgr);
 ```
+<br>
 
 ### 연습문제
 ```
