--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -13,19 +13,19 @@ share: true
 - 여러 개의 테이블을 병합하여 하나의 결과를 도출하기 위한 방법
 
 - 종류
-	- Cartesian Product Join (데카르트 곱)
-	- Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복)
+	1. Cartesian Product Join (데카르트 곱)
+	2. Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복)
 		- INNER JOIN (중복 제거)
-	- OUTER JOIN: INNER JOIN 확장 (INNER JOIN + 공통되지 않은 레코드도 가져옴)
+	3. OUTER JOIN: INNER JOIN 확장 (INNER JOIN + 공통되지 않은 레코드도 가져옴)
 		- LEFT OUTER JOIN
 		- RIGHT OUTER JOIN
 		- FULL OUTER JOIN
-	- Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
-	- SELF JOIN
+	4. Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
+	5. SELF JOIN
 
 - 세개 이상 JOIN 할 경우
 
-- SET 연산자
+- SET 연산자: <br>
 	UNION, UNION ALL, INTERSECT, EXCEPT
 
 <br>
@@ -65,7 +65,9 @@ INSERT INTO tableC VALUES(7, 70);
 INSERT INTO tableC VALUES(8, 80); 
 INSERT INTO tableC VALUES(9, 90); 
 ```
-### Inner Join
+<br>
+
+### INNER JOIN
 ```sql
 SELECT tableA.id, tableA.value 
 FROM tableA INNER JOIN tableB 
@@ -147,7 +149,7 @@ WHERE loc='NEW YORK';
 +--------+-----------+------------+
 ```
 
-### Outer Join
+### OUTER JOIN
 ```sql
 SELECT a.id, a.value 
 FROM tableA a LEFT OUTER JOIN tableB b 
@@ -302,6 +304,7 @@ SELECT deptno FROM scott_dept;
 |     40 |
 +--------+
 ```
+<br>
 
 ## 7. 데이터 무결성 (Integrity)
 - **제약: Constraint**
@@ -453,24 +456,24 @@ ADD CONSTRAINT fk_deptno FOREIGN KEY(deptno)
 REFERENCES tableDEPT(deptno);
 
 INSERT INTO tableEMP(empno, ename, hiredate, deptno) VALUES(1, 'scott', now(), 103);
-	-> ERROR 1452 (23000): Cannot add or update a child row: a foreign key constraint fails
+	--> ERROR 1452 (23000): Cannot add or update a child row: a foreign key constraint fails
 
 INSERT INTO tableEMP(empno, ename, hiredate, deptno) VALUES(1, 'scott', now(), 102);
-	-> Query OK, 1 row affected
+	--> Query OK, 1 row affected
 
 -- NC
 UPDATE tableDEPT SET deptno=1002 WHERE deptno=102;
-	-> ERROR 1451 (23000): Cannot delete or update a parent row: a foreign key constraint fails
+	--> ERROR 1451 (23000): Cannot delete or update a parent row: a foreign key constraint fails
 
 -- NC (삭제 x)
 DROP TABLE tableDEPT;
-	-> ERROR 1217 (23000): Cannot delete or update a parent row: a foreign key constraint fails
+	--> ERROR 1217 (23000): Cannot delete or update a parent row: a foreign key constraint fails
 ```
 
 ### 연습문제
 | column name  	| post1 	| post2 	| addr                        	|
 |---------------|---------  |-----------|-------------------------------|
-| key type     	|   PK    	| PK       	|                             	|
+| key type     	| PK     	| PK       	|                             	|
 | nulls/unique 	|       	|       	| NN                          	|
 | max length   	| 3     	| 3     	| 60                          	|
 | sample       	|       	|       	| seoul, south korea        	|
